fixed issues and styles so it works now :)

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,15 @@ body {
   border: 1px #ccc solid;
   border-radius: 10px;
 }
+
+.moviecard {
+	padding-top: 25px;
+}
+
+.results {
+	padding-top: 25px;
+}
+
+.list-group {
+	padding-bottom: 15px;
+}
